--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,8 +38,32 @@ a {
   color: seashell;
 }
 
+.main {
+  width: 1200px;
+  margin: auto;
+  opacity: 0.9;
+  padding-top: 69px;
+}
+
 .flex-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+#mission {
+  height: 700px;
+  padding-top: 70px;
+  background-image: url("../images/img-mission-background.jpg");
+}
+
+.content {
+  width: 100%;
+  background-color: black;
+  margin: auto;
+}
+
+h2, h3, h4 {
+  padding: 10px;
+  margin: 0;
 }
