--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,12 +51,6 @@ a {
   flex-wrap: wrap;
 }
 
-#mission {
-  height: 700px;
-  padding-top: 70px;
-  background-image: url("../images/img-mission-background.jpg");
-}
-
 .content {
   width: 100%;
   background-color: black;
@@ -66,4 +60,23 @@ a {
 h2, h3, h4 {
   padding: 10px;
   margin: 0;
+}
+
+#mission {
+  height: 700px;
+  padding-top: 70px;
+  background-image: url("../images/img-mission-background.jpg");
+}
+
+#store {
+  height: 700px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 70px;
+}
+
+.item img {
+  height: 200px;
+  display: block;
+  margin: 10px;
 }
