--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -80,3 +80,25 @@ h2, h3, h4 {
   display: block;
   margin: 10px;
 }
+
+#locations {
+  background-image: url("../images/img-locations-background.jpg");
+  height: 440px;
+  padding-top: 60px;
+}
+
+#locations .flex-container {
+  width: 1100px;
+  margin: auto;
+}
+
+.location {
+  opacity: 1.0;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  flex-basis: 280px;
+  margin: 5px 20px;
+}
