--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -64,7 +64,6 @@ h2, h3, h4 {
 
 #mission {
   height: 700px;
-  padding-top: 70px;
   background-image: url("../images/img-mission-background.jpg");
 }
 
@@ -101,4 +100,13 @@ h2, h3, h4 {
   padding: 10px;
   flex-basis: 280px;
   margin: 5px 20px;
+}
+
+#contact {
+  height: 200px;
+}
+
+footer {
+  text-align: left;
+  padding-left: 20px;
 }
